fixed image stretching

--- a/src/components/project_page/scss/Project.scss
+++ b/src/components/project_page/scss/Project.scss
@@ -151,6 +151,10 @@
     text-align: center;
 }
 
+.align-self {
+    align-self: center;
+}
+
 .image-container {
     display: flex;
     justify-content: space-between;
